Editor scrollbar fixes. Seo info added

--- a/src/app/features/main/components/labeled-editor/labeled-editor.component.scss
+++ b/src/app/features/main/components/labeled-editor/labeled-editor.component.scss
@@ -15,6 +15,10 @@ app-editor {
     .editor {
       border-radius: 0 0 24px 24px;
     }
+
+    .ace_gutter {
+      border-radius: 0 0 0 24px;
+    }
   }
 }
 
