--- a/src/app/shared/components/editor/editor.component.scss
+++ b/src/app/shared/components/editor/editor.component.scss
@@ -104,15 +104,13 @@ $numeric-color: #8c7aff;
     }
 
     ::-webkit-scrollbar-track-piece {
-      margin: 15px 0;
+      margin: 15px 15px;
     }
 
     ::-webkit-scrollbar-thumb:horizontal {
-      border-top-width: 4px;
-      border-right-width: 0;
-      border-bottom-width: 4px;
-      border-left-width: 0;
-      border-radius: 4px 9px;
+      background-color: var(--gray-550);
+      border: 4px solid var(--gray-600);
+      border-radius: 9px;
     }
   }
 
